--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -118,7 +118,7 @@ body {
   padding: 1rem;
 }
 
-p {
+p, b {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -189,4 +189,9 @@ p {
 
 .open {
   left: 0;
+}
+
+h1, h2 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
