--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -100,7 +100,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #0F3C4D;
+  background-color: white;
   transform-origin: bottom right;
   transition: transform 0.25s ease-out; }
 
