--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -208,12 +208,110 @@ body {
   background: linear-gradient(to bottom, $dark-page 0%, $dark 100%);
 }
 
-.second-container {
-  margin-left: 2rem;
-  margin-right: 2rem;
-  background: #F1F1F1;
-  width: 100%;
-  padding: 1rem;
+//desktop
+@media only screen and (min-width: $responsiveSize) {
+  .main-container__info {
+    position: relative;
+    top: 7rem;
+    color: white;
+    text-decoration: solid;
+  }
+  .main-container {
+    position: relative;
+    width: 100;
+    height: 100vh;
+    overflow-x: hidden;
+    z-index: 1;
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+  .main-container__btn {
+    position: absolute;
+    right: 0rem;
+    bottom: 7rem;
+    color: white;
+    text-decoration: solid;
+    cursor: pointer;
+    button {
+      padding: 0.5rem 2rem;
+      font-size: 1rem;
+      border-radius: 2rem;
+    }
+  }
+  .second-container {
+    margin-left: 5rem;
+    margin-right: 5rem;
+    background: #F1F1F1;
+    width: 100%;
+    padding: 1rem;
+  }
+  .third-container {
+    position: relative;
+    width: 100;
+    height: 100vh;
+    overflow-x: hidden;
+    z-index: 1;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    vertical-align: baseline;
+  }
+  .third-container__content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    transform: translate(0, -50%);
+  }
+}
+// mobile
+@media only screen and (max-width: $responsiveSize) {
+  .main-container__info {
+    position: relative;
+    top: 5rem;
+    color: white;
+    text-decoration: solid;
+    h1, h2 {
+      margin-top: 0;
+    }
+  }
+  .main-container {
+    position: relative;
+    width: 100;
+    height: 100vh;
+    overflow-x: hidden;
+    z-index: 1;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+  .main-container__btn {
+    position: absolute;
+    bottom: 7rem;
+    color: white;
+    text-decoration: solid;
+    left: 50%;
+    transform: translate(-50%, 0);
+    cursor: pointer;
+    button {
+      padding: 0.5rem 2rem;
+      font-size: 1rem;
+      border-radius: 2rem;
+    }
+  }
+  .second-container {
+    margin-left: 2rem;
+    margin-right: 2rem;
+    background: #F1F1F1;
+    width: 100%;
+    padding: 1rem;
+  }
+  .third-container {
+    position: relative;
+    width: 100;
+    height: auto;
+    overflow-x: hidden;
+    z-index: 1;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
 }
 
 p, b {
@@ -288,4 +386,21 @@ p, b {
 h1, h2 {
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.text-gray {
+  opacity: 0.5;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-column {
+  align-items: center;
+  flex-direction: column;
 }
