--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -222,7 +222,6 @@ body {
   }
   .main-container {
     position: relative;
-    width: 100;
     height: 100vh;
     overflow-x: hidden;
     z-index: 1;
@@ -239,8 +238,10 @@ body {
     button {
       padding: 0.5rem 2rem;
       font-size: 1rem;
-      border-radius: 2rem;
+      border-radius: 0.5rem;
+      border: none;
     }
+
   }
   .second-container {
     margin-left: 5rem;
@@ -248,22 +249,6 @@ body {
     background: #F1F1F1;
     width: 100%;
     padding: 1rem;
-  }
-  .third-container {
-    position: relative;
-    width: 100;
-    height: 100vh;
-    overflow-x: hidden;
-    z-index: 1;
-    margin-left: 5rem;
-    margin-right: 5rem;
-    vertical-align: baseline;
-  }
-  .third-container__content {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    transform: translate(0, -50%);
   }
 }
 // mobile
@@ -279,7 +264,6 @@ body {
   }
   .main-container {
     position: relative;
-    width: 100;
     height: 100vh;
     overflow-x: hidden;
     z-index: 1;
@@ -306,15 +290,6 @@ body {
     background: #F1F1F1;
     width: 100%;
     padding: 1rem;
-  }
-  .third-container {
-    position: relative;
-    width: 100;
-    height: auto;
-    overflow-x: hidden;
-    z-index: 1;
-    margin-left: 2rem;
-    margin-right: 2rem;
   }
 }
 
@@ -408,3 +383,5 @@ h1, h2 {
   align-items: center;
   flex-direction: column;
 }
+
+@import url('./third-container.scss');
