--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -212,87 +212,6 @@ body {
   background: linear-gradient(to bottom, $dark-page 0%, $dark 100%);
 }
 
-//desktop
-@media only screen and (min-width: $responsiveSize) {
-  .main-container__info {
-    position: relative;
-    top: 7rem;
-    color: white;
-    text-decoration: solid;
-  }
-  .main-container {
-    position: relative;
-    height: 100vh;
-    overflow-x: hidden;
-    z-index: 1;
-    margin-left: 5rem;
-    margin-right: 5rem;
-  }
-  .main-container__btn {
-    position: absolute;
-    right: 0rem;
-    bottom: 7rem;
-    color: white;
-    text-decoration: solid;
-    cursor: pointer;
-    button {
-      padding: 0.5rem 2rem;
-      font-size: 1rem;
-      border-radius: 0.5rem;
-      border: none;
-    }
-
-  }
-  .second-container {
-    margin-left: 5rem;
-    margin-right: 5rem;
-    background: #F1F1F1;
-    width: 100%;
-    padding: 1rem;
-  }
-}
-// mobile
-@media only screen and (max-width: $responsiveSize) {
-  .main-container__info {
-    position: relative;
-    top: 5rem;
-    color: white;
-    text-decoration: solid;
-    h1, h2 {
-      margin-top: 0;
-    }
-  }
-  .main-container {
-    position: relative;
-    height: 100vh;
-    overflow-x: hidden;
-    z-index: 1;
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-  .main-container__btn {
-    position: absolute;
-    bottom: 7rem;
-    color: white;
-    text-decoration: solid;
-    left: 50%;
-    transform: translate(-50%, 0);
-    cursor: pointer;
-    button {
-      padding: 0.5rem 2rem;
-      font-size: 1rem;
-      border-radius: 2rem;
-    }
-  }
-  .second-container {
-    margin-left: 2rem;
-    margin-right: 2rem;
-    background: #F1F1F1;
-    width: 100%;
-    padding: 1rem;
-  }
-}
-
 p, b {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -317,51 +236,6 @@ p, b {
   text-decoration: none;
 }
 
-.burger-menu__container {
-  padding: 0rem 1.938rem;
-}
-
-.header__menu--mobile {
-  position: fixed;
-  background: $dark-page;
-  top: 0;
-  left: -100%;
-  width: 100%;
-  height: 100vh;
-  color: $white;
-  z-index: 3;
-  & ul {
-    padding-inline-start: 0px !important;
-    & li {
-      list-style: none;
-      font-style: normal;
-      font-weight: 500;
-      font-size: 1.125rem;
-      // line-height: 3.75rem;
-      // text-align: center;
-      & a {
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-        opacity: 0.7;
-        color: $white;
-        margin-bottom: 0.5rem;
-      }
-    }
-  }
-}
-
-.burger-menu__header {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 2rem;
-  margin-top: 2rem;
-  align-items: center;
-  & svg {
-    color: $white;
-  }
-}
-
 h1, h2 {
   margin-top: 0;
   margin-bottom: 0;
@@ -384,4 +258,7 @@ h1, h2 {
   flex-direction: column;
 }
 
+@import url('./header.scss');
+@import url('./main-container.scss');
+@import url('./second-container.scss');
 @import url('./third-container.scss');
