Add footer and  carousel

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -262,3 +262,4 @@ h1, h2 {
 @import url('./main-container.scss');
 @import url('./second-container.scss');
 @import url('./third-container.scss');
+@import url('./footer.scss');
