--- a/src/css/second-container.scss
+++ b/src/css/second-container.scss
@@ -1,11 +1,10 @@
 //desktop
 @media only screen and (min-width: $responsiveSize) {
   .second-container {
-    margin-left: 5rem;
-    margin-right: 5rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     background: #F1F1F1;
     width: 100%;
-    padding: 1rem;
   }
 }
 // mobile
